--- a/fullstack.html
+++ b/fullstack.html
@@ -257,23 +257,110 @@ jdyedj
     </div>
 
 
-    <div class="row text-center mt-5">
-        <div class="col-lg-12">
-            <h3><b>Full Stack with React, Angular, JavaScript, Node js</b></h3>
-        
+    <div class="row  mt-5">
+        <div class="col-lg-6">
+          <p><i class="fa-solid fa-circle-arrow-right me-2 "></i><b>LIVE Projects:</b>The Full Stack course offered by Nschool Academy in Coimbatore provides comprehensive instruction through extensive practical exercises and individualized attention to ensure optimal results for each student. Our program includes a real-time live project as part of the Full Stack training curriculum. Our trainers assist students in crafting a professional CV and bolstering their confidence by offering valuable insights into interview questions and techniques through mock interviews.</p>
+         <p><i class="fa-solid fa-circle-arrow-right me-2 "></i><b>Learn from Industry Experts: </b> The Nschool Academy in Coimbatore boasts proficient full-stack trainers who possess extensive programming expertise and are proficient in both frontend and backend technologies. They possess a comprehensive understanding of programming languages such as HTML, CSS, JavaScript, React, Angular, Node.js, and others, as well as the ability to design, manage, and execute database queries.</p>
         </div>
+
+        <div class="col-lg-6">
+<p> <i class="fa-solid fa-circle-arrow-right me-2 "></i></b> Flexibility:</b>Nschool Academy offers a versatile batch schedule, catering to both weekend and weekday learners, as well as those seeking a fast-track Full Stack Course in Coimbatore. It is noteworthy that all eligible students who successfully complete the program will receive 100% placement assistance.</p>
+<p><i class="fa-solid fa-circle-arrow-right me-2 "></i><b>24*7 support: </b>Nschool Academy offers round-the-clock assistance and personalized Full Stack Developer Development sessions with proficient mentors, aimed at equipping learners with the requisite competencies and mindset to secure employment commensurate with their qualifications.</p>
+        </div>
+
+
+
+    </div>
+</div>
+</div>
+
+
+
+
+<div class="container-fluid" style="background-color: rgba(0, 0, 255, 0.171);">
+    <div class="container p-3">
+
+
+    <div class="row mt-4">
+<div class="col-lg-12 text-center">
+<h2><b>Why Full Stack Course ?</b></h2>
+</div>
+</div>
+
+
+<div class="row mt-4">
+<div class="col-lg-12 text-center">
+<p>Our Nschool Academy’s Full Stack Course in Coimbatore programs have been meticulously crafted by proficient instructors to cater to the requirements of the global industry. The courseware has been developed by industry experts to emphasize both frontend and backend technologies. The development of a web application in contemporary times necessitates the utilization of sophisticated approaches and technologies. In essence, web application development entails the collaboration of a team of specialists from diverse technological backgrounds to work on the web application and development process. Frontend developers, backend developers, and database specialists are among the various specializations available.</p>
+</div>
+</div>
+</div>
+</div>
+
+
+
+<div class="container ">
+<div class="row mt-3" style="align-items: center; ">
+<div class="col-lg-5">
+<img src="img/inpant13.png" alt="" width="100%">
+</div>
+
+
+<div class="col-lg-7">
+    <p>A full-stack developer possesses the ability to operate autonomously across all tiers of Web Application and Development. This Developer exhibits proficiency in both client-side or frontend software and server-side or backend software, as well as databases, and is capable of effectively working on mobile and native apps. This is why, in comparison to other types of developers, full-stack developers are highly sought-after in the market. Nschool Academy’s Full Stack Developer course offers comprehensive instruction on the entire end-to-end Web Development process, overseen by certified professionals in real-time. Additionally, we provide full-stack online training with placement support tailored to your specific requirements.</p>
+    <p class="mt-5 pursuing" ><i class="fa-solid fa-circle-arrow-right me-2"></i>Train from professionals with industry experience </p>
+    <p class=" pursuing" ><i class="fa-solid fa-circle-arrow-right me-2"></i>Learn theoretical concepts and gain hands-on training simultaneously </p>
+    <p class=" pursuing" ><i class="fa-solid fa-circle-arrow-right me-2"></i>Real time Hands-On Practical Experience Training to imbibe corporate practices</p>
+    <p class=" pursuing" ><i class="fa-solid fa-circle-arrow-right me-2"></i>Get certified at the end of the training</p>
+    <p class=" pursuing" ><i class="fa-solid fa-circle-arrow-right me-2"></i>Receive placement support once the training is completed </p>
+    <p class=" pursuing" ><i class="fa-solid fa-circle-arrow-right me-2"></i> Getting exposure to latest technology up gradations.</p>
+    <p class=" pursuing" ><i class="fa-solid fa-circle-arrow-right me-2"></i>Advanced lab facility and most updated syllabus and materials will be provided with learning tools for easy learning </p>
+    <p class=" pursuing" ><i class="fa-solid fa-circle-arrow-right me-2"></i>You will have the access to contact the trainers at any time. </p>
+
     </div>
 
 
+</div>
+</div>
 
 
 
+<div class="container-fluid bg-white">
+<div class="container p-3 skew2" style="background-color: rgba(15, 15, 179, 0.95);">
+    <div class="row" style="align-items: center;">
+<div class="col-lg-2">
 
+</div>
+<div class="col-lg-3 text-white">
+    <h3><b>Book Your Free Demo Class Today!</b></h3>
+</div>
 
+<div class="col-lg-3">
 
+</div>
+
+<div class="col-lg-2">
+
+    <button class="contact"><b class="us">CONTACT US</b></button>
+</div>
+
+<div class="col-lg-2">
 
 </div>
 </div>
+
+<div class="row">
+<div class="col-lg-2">
+
+</div>
+<div class="col-lg-10 text-white">
+    <p class="mt-3" style="margin: 0%;">Enhance your decision-making skills from our Free Trial Lessons at NSCHOOL Academy.</p>
+</div>
+
+</div>
+</div>
+</div>
+
+
 
 
 
