--- a/inplanttraining.html
+++ b/inplanttraining.html
@@ -83,8 +83,8 @@
 
 
 
-<div class="container trainer">
-<div class="row mt-2">
+<div class="container trainer p-5">
+<div class="row mt-2 ">
 <div class="col-lg-4 ">
 <img src="img/inpant4.png" alt="" width="15%">
 <h5 class="mt-4"><b>IT SPECIALISTS AS INPLANT TRAINER</b></h5>
@@ -192,7 +192,6 @@
 <p class="mt-4 mentor"><i class="fa-solid fa-circle-plus" style="color:rgba(15, 15, 179, 0.95); font-size: x-large;"></i><b class="ms-3">Tell us about your Demo class facility?</b></p>
 </div>
 </div>
-
 </div>
 </div>   
 
